PIVOT-1020:  A few more Style values. Finish off all the rest of the Style enum changes in "wtk" and "wtk-terra". Tweak a few demos, tests, and tutorials too.  Changes include some places where "Integer.valueOf" didn't seem necessary because of autoboxing, and similar tweaks.
git-svn-id: https://svn.apache.org/repos/asf/pivot/trunk@1823528 13f79535-47bb-0310-9956-ffa450edef68